# lang-gap

./: .gitignore  LICENSE  README.md  pyproject.toml
prompts/: question_writer.md
questions/: coding.yaml  reasoning.yaml
reports/: 62a9c4dd9b28.md
results/: 62a9c4dd9b28.json
src/lang_gap/: __main__.py  _paths.py  client.py  config.py  evaluator.py  extractor.py  report.py  runner.py  schemas.py
tests/: test_evaluator.py  test_extractor.py  test_report.py  test_runner.py
