[project]
name = "lang-gap"
version = "0.1.0"
description = "EN vs RU LLM benchmark — measures quality loss when prompting in Russian instead of English"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27",
    "pyyaml>=6.0",
    "pydantic>=2.0",
    "rich>=13.0",
    "python-dotenv>=1.0",
]

[project.scripts]
lang-gap = "lang_gap.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/lang_gap"]
